--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "bum",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "App for when I pursue climbing bum life in Nepal",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "vite": "^6.2.0"
+    "vite": "^6.2.3"
   }
 }
